# sudoku

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  build_web.sh
sources/: chess_main.c  main.c  minshell.html
tests/: module1.c  suite1.c  suite2.c  test_main.c  unit.h
